[gd_scene load_steps=6 format=2]

[ext_resource path="res://default_env.tres" type="Environment" id=1]
[ext_resource path="res://mm_capture/boxes_viewport.gd" type="Script" id=2]
[ext_resource path="res://mm_capture/red.tres" type="Material" id=3]

[sub_resource type="World" id=1]
environment = ExtResource( 1 )

[sub_resource type="CubeMesh" id=2]

[node name="ViewportContainer" type="ViewportContainer"]
anchor_left = 0.687
anchor_right = 1.0
anchor_bottom = 0.4
margin_left = 0.464966
margin_top = 0.0144501
margin_right = -0.0474854
margin_bottom = 0.0140076
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Viewport" type="Viewport" parent="."]
size = Vector2( 320, 180 )
own_world = true
world = SubResource( 1 )
handle_input_locally = false
render_target_update_mode = 3

[node name="Box_00" type="MeshInstance" parent="Viewport"]
transform = Transform( 0.05, 0, 0, 0, 0.05, 0, 0, 0, 0.05, 0, 0, 0 )
mesh = SubResource( 2 )
material/0 = ExtResource( 3 )

[node name="Box_01" type="MeshInstance" parent="Viewport"]
transform = Transform( 0.05, 0, 0, 0, 0.05, 0, 0, 0, 0.05, 0, 0, 0 )
mesh = SubResource( 2 )
material/0 = ExtResource( 3 )

[node name="Box_02" type="MeshInstance" parent="Viewport"]
transform = Transform( 0.05, 0, 0, 0, 0.05, 0, 0, 0, 0.05, 0, 0, 0 )
mesh = SubResource( 2 )
material/0 = ExtResource( 3 )

[node name="Camera" type="Camera" parent="Viewport"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1.61071 )
[connection signal="resized" from="." to="." method="_on_ViewportContainer_resized"]
